--- a/public/auth/css/style.css
+++ b/public/auth/css/style.css
@@ -13,3 +13,11 @@
     transform: translate(-50%, -50%);
     width: 400px;
 }
+
+p{
+    margin: 0;
+    padding: 0;
+}
+a{
+    text-decoration: none;
+}
